fixed spacing in header

--- a/frontendresume/css/style.css
+++ b/frontendresume/css/style.css
@@ -13,6 +13,9 @@ h6 {
   margin:0;
   font-family: "Roboto", sans-serif;
 }
+body {
+  background-color: #f3f3f3;
+}
 
 .clear-fix {
   overflow: auto;
@@ -71,6 +74,10 @@ h5 {
 #workExperience, #projects, #education {
   padding-bottom: 16px;
 }
+#projects {
+  background-color: white;
+  border-radius: 5px;
+}
 
 .location-text {
   font-style: italic;
@@ -104,12 +111,12 @@ a {
   font-style: italic;
   font-size: 18px;
   color: #f3f3f3;
-  line-height: 28px;
 }
 
 #skills-h3 {
   color: #f5ae23;
   display: none;
+  padding-top: 2em;
 }
 
 .orange {
@@ -151,6 +158,7 @@ a {
 
 .center-content {
   padding: 2.5% 5%;
+  padding-bottom:0px;
 }
 
 ul {
@@ -159,9 +167,11 @@ ul {
 
 .biopic {
   float: left;
-  padding: 10px;
+  margin: 10px;
   width: 200px;
   display: none;
+  border-radius: 10px;
+  margin-right:2em;
 }
 
 /*img {
